--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -91,4 +91,18 @@ html {
     --user-page-text: #1a162e;
     --user-page-main-bg: #ffffff;
     --user-page-main-shadow: 0 20px 60px 10px rgba(237, 237, 246, 0.9);
+
+    //user card
+    --user-card-border: #d2d1d6;
+
+    // user info
+    --user-info-item-bg: #f6f6f6;
+    --user-info-item-icon-bg: #ffffff;
+    --user-info-item-text: #1a162e;
+
+    // user-item
+    --user-list-text: #1a162e;
+    --user-list-border: #d2d1d6;
+    --user-list-action-text: #1a162e;
+    --user-list-action-bg: #ffb700;
 }
