--- a/scss/pages/_user.scss
+++ b/scss/pages/_user.scss
@@ -15,7 +15,11 @@
 }
 
 .user-main {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
     padding: 30px;
     border-radius: 20px;
     box-shadow: var(--user-page-main-shadow);
+    background-color: var(--user-page-main-bg);
 }
