--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -13,3 +13,7 @@
 @forward "./user-card";
 @forward "./user-info";
 @forward "./user-item";
+@forward "./user-modified";
+@forward "./cm-checkbox";
+@forward "./checkout";
+@forward "./side-calc";
