--- a/scss/components/_user-item.scss
+++ b/scss/components/_user-item.scss
@@ -4,7 +4,7 @@
     &__item {
         display: grid;
         grid-template-columns: auto 1fr;
-        gap:  10px 20px;
+        gap: 10px 20px;
 
         &:not(:last-child) {
             padding-bottom: 20px;
@@ -56,6 +56,10 @@
             font-size: 1.5rem;
             font-weight: 500;
             line-height: 1.46;
+            transition: 0.5s;
+            &:hover {
+                color: white;
+            }
         }
     }
 }
