--- a/scss/pages/_production.scss
+++ b/scss/pages/_production.scss
@@ -1,3 +1,8 @@
+@use "../abstracts" as ab;
+
 .production-page-wrap {
     margin-top: 30px;
+    @include ab.screen(md) {
+        margin-top: 20px;
+    }
 }
