--- a/scss/components/_fav-add-btn.scss
+++ b/scss/components/_fav-add-btn.scss
@@ -8,7 +8,7 @@
     filter: var(--icon-color);
 
     &.active {
-        filter: none;
+        filter: none !important ; 
         background-image: url(../icon/heart-red.svg);
     }
 }
