--- a/scss/components/_production.scss
+++ b/scss/components/_production.scss
@@ -1,3 +1,5 @@
+@use "../abstracts" as ab;
+
 .production {
     //
     &__img {
@@ -109,9 +111,10 @@
 
         &-btn {
             flex-shrink: 0;
-
+            display: flex;
+            align-items: center;
             height: 45px;
-            padding: 0 20%;
+            padding: 0 50px;
             border-radius: 6px;
 
             background-color: var(--production-cta-bg);
@@ -120,6 +123,14 @@
             font-size: 1.8rem;
             font-weight: 500;
             line-height: 1.44;
+
+            @include ab.screen(xl) {
+                padding: 0 30px;
+            }
+
+            @include ab.screen(lg) {
+                padding: 0 40px;
+            }
         }
 
         &-fav {
