--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -125,4 +125,14 @@ html {
     --check-out-dark-to-gray-filter: brightness(0) saturate(100%) invert(6%)
         sepia(23%) saturate(4962%) hue-rotate(233deg) brightness(88%)
         contrast(92%);
+
+    // new
+    --1A162E-to-B9BABE: #1a162e;
+    --D2D1D6-to-292E39: #d2d1d6;
+    --linear-7644e1-to-292E39: linear-gradient(
+            0deg,
+            rgba(255, 255, 255, 0.9) 0%,
+            rgba(255, 255, 255, 0.9) 100%
+        ),
+        #7644e1;
 }
