--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -18,11 +18,10 @@ body {
     filter: var(--icon-color);
 }
 
-
-
 // @use "../abstracts" as ab;
 
 // _______________________________________________
 // @include ab.screen(lg) {
 // }
 
+//  @include ab.common-btn ()  ;
