--- a/templates/header.html
+++ b/templates/header.html
@@ -2046,7 +2046,9 @@
                                 <div class="cart-preview__header">
                                     You have <i>3</i> item
                                 </div>
-                                <a href="#!" class="cart-preview__linkPage"
+                                <a
+                                    href="./checkout.html"
+                                    class="cart-preview__linkPage"
                                     >See All</a
                                 >
                             </div>
@@ -2129,9 +2131,12 @@
                                 </div>
                             </div>
                             <div class="cart-preview__separator"></div>
-                            <button class="cart-preview__checkout">
+                            <a
+                                href="./checkout.html"
+                                class="cart-preview__checkout"
+                            >
                                 Check Out All
-                            </button>
+                            </a>
                         </section>
                     </div>
                 </div>
